--- a/App/index.html
+++ b/App/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneGoal</title>
+    <link rel="stylesheet" href="assets/css/estilo.css">
 </head>
 <body>
-    
+    <header class="header">
+        <figure class="header__logo">
+            <!-- <img src="assets/img/iconos/logo.svg" alt="OneGoal" class="header__logo-img"> -->
+        </figure>
+        <nav class="header__nav">
+            <a href="#" class="header__nav-link">Bets</a>
+            <a href="#" class="header__nav-link">Challenges</a>
+            <a href="#" class="header__nav-link">Rankings</a>
+            <a href="#" class="header__nav-link">Log in</a>
+            <a href="#" class="header__nav-link">Sign up</a>
+        </nav>
+    </header>
+
+    <main class="main">
+        <section class="main__hero">
+            <div class="main__hero-text">The Social Betting Platform for Football Fans</div>
+            <button class="main__hero-button">Start betting</button>
+        </section>
+
+        <section class="main__about">
+            <h2 class="main__about-title">About Us</h2>
+            <div class="main__about-cards">
+                <div class="main__about-card">
+                    <div class="main__about-card-icon">📱</div>
+                    <div class="main__about-card-text">Easy to use</div>
+                </div>
+                <div class="main__about-card">
+                    <div class="main__about-card-icon">🔒</div>
+                    <div class="main__about-card-text">Secure</div>
+                </div>
+                <div class="main__about-card">
+                    <div class="main__about-card-icon">🤝</div>
+                    <div class="main__about-card-text">Fan and Social</div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer__links">
+            <a href="#">Contact Us</a>
+            <a href="#">Follow Us</a>
+        </div>
+        <div class="footer__text">&copy; 2025 OneGoal. All rights reserved.</div>
+    </footer>
 </body>
 </html>
