Paginas de chanllenges, rankings, profile y sign up, falta bets y pop up

--- a/App/index.html
+++ b/App/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneGoal</title>
     <link rel="stylesheet" href="assets/css/estilo.css">
+    <link rel="icon" href="./assets/img/iconos/logo.svg">
 </head>
 <body>
     <header class="header">
@@ -15,15 +16,15 @@
 
         <!-- NAVEGACION PAGINAS -->
         <nav class="header__nav">
-            <a href="#">Bets</a>
-            <a href="#">Challenges</a>
-            <a href="#">Rankings</a>
+            <a href="./pages/signup.html">Bets</a>
+            <a href="./pages/signup.html">Challenges</a>
+            <a href="./pages/signup.html">Rankings</a>
         </nav>
         
         <!-- BOTONES LOGIN/SIGNUP -->
         <div class="buttons">
-            <button class="button__login">Log In</button>
-            <button class="button__singup">Sign Up</button>
+            <a href="./pages/signup.html" class="button__login">Log In</a>
+            <a href="./pages/signup.html" class="button__singup">Sign Up</a>
         </div>
     </header>
     <div class="separador">
@@ -42,7 +43,7 @@
 
             </div>
             <div class="main__portada-button">
-                <a href="#">Start Betting</a>
+                <a href="./pages/signup.html">Start Betting</a>
             </div>
             
 
