Todas las paginas responsive terminadas

--- a/App/pages/profile.html
+++ b/App/pages/profile.html
@@ -203,7 +203,7 @@
                             <img src="../assets/img/camisetas/Barsa.webp" alt="Barsa">
                         </div>
                     </div>
-                    <div class="game__teams-name">
+                    <div class="game__teams-name oculto2">
                         <div class="teamA__name">
                             <p>ESP</p>
                             <p>Espanyol FC</p>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__history-game">
+                <div class="main__history-game oculto2">
                     <div class="game__teams">
                         <div class="teamA">
                             <img src="../assets/img/camisetas/Espanyol.webp" alt="Espanyol">
