--- a/App/pages/bets.html
+++ b/App/pages/bets.html
@@ -41,6 +41,7 @@
 
     <main class="main">
 
+        <!-- SELECCION DE LIGAS Y CREACION DE APUESTA -->
         <section class="main__leagues">
 
             <div class="main__leaguesBet-title">
@@ -53,6 +54,7 @@
                 </div>
                 
             </div>
+            <!-- SLIDER DE LIGAS -->
             <div class="main__leagues-select">
                     <div class="slider-item">
                         <img src="../assets/img/ligas/premierLeague 1.png" alt="Premier League">
@@ -86,12 +88,14 @@
                     </div>
             </div>
         </section>
+        <!-- APUESTAS ACTIVAS -->
         <section class="main__activeBets">
             <div class="main__titles">
                 <div class="box_titulo_derecha">
                 </div>
                 <h2>ACTIVE BETS</h2>
             </div>
+            <!-- CONTENEDOR DE TODOS LOS PARTIDOS -->
             <div class="main__games">
                 <div class="main__game">
                     <div class="game__teams">
@@ -273,12 +277,14 @@
                 <a href="#">View More +</a>
             </div>
         </section>
+        <!-- APUESTAS GLOBALES A LAS QUE UNIRSE -->
         <section class="main__worldBets">
             <div class="main__titles">
                 <div class="box_titulo">
                 </div>
                 <h2>WORLD BETS</h2>
             </div>
+            <!-- CONTENEDOR DE PARTIDOS -->
             <div class="main__games">
                 <div class="main__game-nohover">
                     <div class="game__teams">
@@ -461,12 +467,14 @@
             </div>
         </section>
 
+        <!-- PROXIMOS PARTIDOS -->
         <section class="main__nextMatches">
             <div class="main__titles">
                 <div class="box_titulo_derecha">
                 </div>
                 <h2>UPCOMING MATCHES</h2>
             </div>
+            <!-- CONTENDOR DE PARTIDOS QUE COMENZARAN PROXIMAMENTE -->
             <div class="main__games">
                 <div class="main__game">
                     <div class="game__teams">
@@ -704,6 +712,7 @@
             </div>
         </section>
 
+        <!-- POP UP PARA LA CREACION DE APUESTAS -->
         <div class="main__popUp" id="createBet">
             <div class="main__popUp-content">
                 <h2>CREATE BET</h2>
@@ -764,6 +773,8 @@
             </div>
 
         </div>
+
+        <!-- OVERLAY PARA QUE NO SE PUEDA INTERACTUAR CON EL FONDO CUANDO SALTE EL POP UP -->
         <div class="overlay"></div>
     </main>
     <!-- BARRA NAVEGACION PARA MOVIL -->
