--- a/App/pages/profile.html
+++ b/App/pages/profile.html
@@ -38,8 +38,11 @@
     </div>
 
     <main class="main">
+        <!-- IMAGEN DEL BANNER DEL PERFIL DE USUARIO -->
         <section class="main__header">
         </section>
+
+        <!-- DATOS DEL USUARIO -->
         <section class="main__data">
             <div class="main__data-user">
                 <img src="../assets/img/iconos/userImg2.png" alt="User">
@@ -58,6 +61,7 @@
         </section>
         <div class="separador2">
         </div>
+        <!-- INFORMACION PERSONAL -->
         <section class="main__personalInfo">
             <div class="main__titles">
                 <div class="box_titulo"></div>
@@ -78,7 +82,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- HISTORIAL DE APUESTAS -->
         <section class="main__history">
             <div class="main__titles">
                 <div class="box_titulo_derecha"></div>
