--- a/App/pages/ranking.html
+++ b/App/pages/ranking.html
@@ -36,8 +36,10 @@
     <div class="separador">
 
     </div>
-
+    
+    <!-- CONTENIDO DE LOS DOS RANKINGS: AMIGOS Y GLOBAL -->
     <main class="main">
+        <!-- RANKING DE AMIGOS -->
         <div class="main__friends">
             <div class="main__titles">
                 <div class="box_titulo"></div>
@@ -78,6 +80,7 @@
                 </div>
             </div>
         </div>
+        <!-- RANKING GLOBAL -->
         <div class="main__global">
             <div class="main__titles">
                 <div class="box_titulo_derecha"></div>
