--- a/App/pages/signup.html
+++ b/App/pages/signup.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../assets/img/iconos/logo.svg">
 </head>
 <body>
+    <!-- BURBUJAS PARA LA ANIMACION DE LA PAGINA -->
     <div class="bubbles">
         <div class="bubble"></div>
         <div class="bubble"></div>
@@ -60,6 +61,7 @@
         <div class="bubble"></div>
         <div class="bubble"></div>
       </div>
+    <!-- FORMULARIO DE REGISTRO -->
     <main class="signup">
         <h1>SIGN UP</h1>
         <div class="signup__form">
