--- a/App/pages/challenges.html
+++ b/App/pages/challenges.html
@@ -37,6 +37,7 @@
     </div>
 
     <main class="main">
+        <!-- RESTOS DIARIOS -->
         <div class="main__daily">
             <div class="main__titles">
                 <div class="box_titulo"></div>
@@ -73,6 +74,7 @@
                 </div>
             </div>
         </div>
+        <!-- RETOS GLOBALES -->
         <div class="main__global">
             <div class="main__titles">
                 <div class="box_titulo_derecha"></div>
@@ -111,6 +113,7 @@
                 </div>
             </div>      
         </div>
+        <!-- RETOS COMPLETADOS -->
         <div class="main__completed">
             <div class="main__titles">
                 <div class="box_titulo"></div>
