Animacion de fade-in añadida

--- a/App/index.html
+++ b/App/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/estilo.css">
     <link rel="icon" href="./assets/img/iconos/logo.svg">
 </head>
-<body>
+<body >
     <header class="header">
         <!-- LOGO/HOME -->
         <div class="header__logo">
@@ -30,7 +30,7 @@
     </header>
     <div class="separador"></div>
 
-    <main class="main">
+    <main class="main fade-in">
 
         <!-- PORTADA CON IMAGEN DE FONDO -->
 
