--- a/App/pages/bets.html
+++ b/App/pages/bets.html
@@ -39,7 +39,7 @@
 
     </div>
 
-    <main class="main">
+    <main class="main fade-in">
 
         <!-- SELECCION DE LIGAS Y CREACION DE APUESTA -->
         <section class="main__leagues">
