--- a/App/pages/profile.html
+++ b/App/pages/profile.html
@@ -37,7 +37,7 @@
 
     </div>
 
-    <main class="main">
+    <main class="main fade-in">
         <!-- IMAGEN DEL BANNER DEL PERFIL DE USUARIO -->
         <section class="main__header">
         </section>
