--- a/App/pages/ranking.html
+++ b/App/pages/ranking.html
@@ -38,7 +38,7 @@
     </div>
     
     <!-- CONTENIDO DE LOS DOS RANKINGS: AMIGOS Y GLOBAL -->
-    <main class="main">
+    <main class="main fade-in">
         <!-- RANKING DE AMIGOS -->
         <div class="main__friends">
             <div class="main__titles">
