--- a/App/pages/challenges.html
+++ b/App/pages/challenges.html
@@ -36,7 +36,7 @@
 
     </div>
 
-    <main class="main">
+    <main class="main fade-in">
         <!-- RESTOS DIARIOS -->
         <div class="main__daily">
             <div class="main__titles">
